# ocds-index

./: MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  lint.yml  pypi.yml
docs/: changelog.rst  cli.rst  conf.py  index.rst
ocdsindex/: __main__.py  allow.py  crawler.py  exceptions.py  extract.py
ocdsindex/cli/: __main__.py
tests/: __init__.py  test_crawler.py  test_extract.py  test_main.py
tests/commands/: test_copy.py  test_index.py  test_reindex.py  test_sphinx.py
tests/fixtures/en/schema/: index.html
tests/fixtures/failure/: index.html
tests/fixtures/static/: index.html
