[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ocdsindex"
version = "0.2.0"
authors = [{name = "Open Contracting Partnership", email = "data@open-contracting.org"}]
description = "A command-line tool and library to index OCDS documentation in Elasticsearch"
readme = "README.rst"
license = {text = "BSD"}
urls = {Homepage = "https://github.com/open-contracting/ocds-index"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "click",
    "elasticsearch[requests]>=8,<9",
    "lxml",
]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
]

[project.scripts]
ocdsindex = "ocdsindex.__main__:main"

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
]

[tool.ruff]
line-length = 119
target-version = "py39"

[tool.ruff.lint]
select = ["E", "C4", "F", "I", "W"]
