[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ocdsindex"
version = "0.2.0"
authors = [{name = "Open Contracting Partnership", email = "data@open-contracting.org"}]
description = "A command-line tool and library to index OCDS documentation in Elasticsearch"
readme = "README.rst"
license = {text = "BSD"}
urls = {Homepage = "https://github.com/open-contracting/ocds-index"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "click",
    "elasticsearch[requests]>=8,<9",
    "lxml",
]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
]

[project.scripts]
ocdsindex = "ocdsindex.__main__:main"

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
]

[tool.ruff]
line-length = 119
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D1",
    "PLR2004",  # magic
    "PTH",
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["D100", "INP001"]
"tests/*" = [
    "ARG001", "D", "FBT003", "INP001", "PLR2004", "S", "TRY003",
]
